fixed footer links out-of-bound body issue, and line spacing of html

--- a/sccprogrammingclub-frontend/src/app/components/shared/footer/footer.component.css
+++ b/sccprogrammingclub-frontend/src/app/components/shared/footer/footer.component.css
@@ -16,7 +16,7 @@ ul {
 }
 
 ul li {
-  margin: 0 4px;
+  margin: 3px 4px;
   display: inline-block;
 }
 
